--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/portjmo?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=andrea.28
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
